namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-support-additional-needs-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-support-additional-needs-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "plp-dev"
    cloud-platform.justice.gov.uk/application: "HMPPS Support Additional Needs"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-support-additional-needs-api"
    cloud-platform.justice.gov.uk/team-name: "hmpps-farsight-reduce-re-offend"
    cloud-platform.justice.gov.uk/review-after: ""
